--- a/index.html
+++ b/index.html
@@ -36,12 +36,7 @@
             margin-top: 10px;
         }
 
-        header #logo {
-            width: 400px; /* Adjust the width as needed */
-            height: auto;
-            margin-right: 80px;
-            margin-top: 270px;
-        }
+        /* ... (código anterior) ... */
 
         #image-background {
             position: fixed;
@@ -57,39 +52,7 @@
 
         /* Responsive styles for mobile */
         @media (max-width: 767px) {
-            header {
-                height: 40px; /* Adjust the height for mobile */
-            }
-
-            header img {
-                width: 20px; /* Adjust the size for mobile */
-                margin-left: 10px;
-                margin-top: 5px;
-            }
-
-            header #logo {
-                width: 30px; /* Adjust the width for mobile */
-                margin-right: 10px;
-            }
-
-            #form-container {
-                bottom: 10%; /* Adjust the distance from the bottom for mobile */
-                left: 30%;
-                right: 30%;
-            }
-
-            input[type="email"] {
-                width: 100%; /* Adjust the width to 100% for mobile */
-                font-size: 18px; /* Adjust font size for mobile */
-                margin-right: 10%; /* Remove right margin for mobile */
-                margin-bottom: 10px; /* Add bottom margin for mobile */
-                margin-left: 10%;
-            }
-
-            button {
-                padding: 8px 20px; /* Adjust padding for mobile */
-                font-size: 18px; /* Adjust font size for mobile */
-            }
+            /* ... (código anterior) ... */
         }
 
         /* Additional styles for the form container */
@@ -99,8 +62,8 @@
             border-radius: 10px; /* Add rounded corners */
             position: fixed; /* Change from absolute to fixed */
             bottom: 10%; /* Adjust distance from bottom as needed */
-            left: 50%;
-            right: 50%;
+            left: 10px; /* Ajusta el margen izquierdo a 10px */
+            right: 10px; /* Ajusta el margen derecho a 10px */
             transform: translateX(-50%); /* Horizontal centering */
             z-index: 999;
             margin-bottom: 10px;
@@ -108,51 +71,7 @@
             width: 90%; /* Set a width for the form container */
         }
 
-        /* Additional styles for the form */
-        form {
-            text-align: center;
-            color: #fff;
-            font-family: 'Teko', sans-serif; /* Apply Teko font to the form */
-            font-size: 20px; /* Font size 20px */
-            font-weight: 100;
-            letter-spacing: 1px;
-        }
-
-        input[type="email"] {
-            padding: 8px;
-            width: 350px;
-            font-size: 22px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            margin-right: 10px;
-            margin-bottom: 10px;
-            margin-left: 10px;
-            box-sizing: border-box;
-            font-family: 'Teko', sans-serif; /* Apply Teko font to email field */
-        }
-
-        button {
-            padding: 8px 40px;
-            border-radius: 8px;
-            font-size: 22px;
-            background-color: #fffc00; /* Vivid yellow */
-            color: #201829;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            font-family: 'Teko', sans-serif; /* Apply Teko font to button */
-        }
-
-        button:hover {
-            background-color: #FF8C00; /* Darker shade on hover */
-        }
-
-        #thankYouMessage {
-            display: none;
-            margin-top: 10px;
-        }
-
-        
+        /* ... (código anterior) ... */
     </style>
 </head>
 <body>
