--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
             padding: 20px; /* Add padding to the container */
             border-radius: 10px; /* Add rounded corners */
             position: fixed; /* Change from absolute to fixed */
-            bottom: 10%; /* Adjust distance from bottom as needed */
-            left: 10px; /* Ajusta el margen izquierdo a 10px */
-            right: 10px; /* Ajusta el margen derecho a 10px */
-            transform: translateX(-50%); /* Horizontal centering */
+            top: 50%; /* Centrar verticalmente en la mitad de la pantalla */
+            left: 10px; /* Ajustar margen izquierdo a 10px */
+            right: 10px; /* Ajustar margen derecho a 10px */
+            transform: translate(-50%, -50%); /* Centrar horizontalmente y verticalmente */
             z-index: 999;
             margin-bottom: 10px;
-            max-width: 600px; /* Set a maximum width for the form container */
-            width: 90%; /* Set a width for the form container */
+            max-width: calc(100% - 20px); /* Expandir hasta los lados con margen */
+            width: 600px; /* Fijar un ancho máximo para el formulario */
         }
 
         /* ... (código anterior) ... */
