--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
             border-radius: 10px; /* Add rounded corners */
             position: fixed; /* Change from absolute to fixed */
             top: 50%; /* Centrar verticalmente en la mitad de la pantalla */
-            left: 10px; /* Ajustar margen izquierdo a 10px */
-            right: 10px; /* Ajustar margen derecho a 10px */
+            left: 50%; /* Centrar horizontalmente en la mitad de la pantalla */
             transform: translate(-50%, -50%); /* Centrar horizontalmente y verticalmente */
             z-index: 999;
             margin-bottom: 10px;
-            max-width: calc(100% - 20px); /* Expandir hasta los lados con margen */
-            width: 600px; /* Fijar un ancho máximo para el formulario */
+            max-width: 600px; /* Fijar un ancho máximo para el formulario */
+            width: 90%; /* Ajustar el ancho según sea necesario */
         }
 
         /* ... (código anterior) ... */
