--- a/index.html
+++ b/index.html
@@ -28,24 +28,26 @@
             max-width: 672px;
             margin: 10px;
             box-sizing: border-box;
+            /* Incremento del tamaño vertical en un 40% */
+            height: 140%;
         }
 
         input[type="text"] {
-            padding: 16.8px;
+            padding: 22.4px; /* Aumento del tamaño en un 40% */
             width: calc(100% - 20px);
-            margin-bottom: 16.8px;
+            margin-bottom: 22.4px; /* Aumento del tamaño en un 40% */
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
-            font-size: 22.4px;
+            font-size: 31.36px; /* Aumento del tamaño en un 40% */
             font-weight: 600;
             color: #fff;
         }
 
         button {
             width: calc(100% - 20px);
-            padding: 16.8px;
-            font-size: 26.88px;
+            padding: 22.4px; /* Aumento del tamaño en un 40% */
+            font-size: 37.632px; /* Aumento del tamaño en un 40% */
             background-color: #4caf50;
             color: #fff;
             border: none;
@@ -62,7 +64,7 @@
 <body>
 
     <div id="signup-container">
-        <h2 style="font-size: 28.8px; font-weight: 600; color: #fff;">Stay tuned with the last news & updates</h2>
+        <h2 style="font-size: 33.6px; font-weight: 600; color: #fff;">Stay tuned with the last news & updates</h2>
         <form>
             <input type="text" id="emailInput" placeholder="Enter your email" required>
             <br>
