--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         #signup-container {
             text-align: center;
-            padding: 33.6px;
+            padding: 40.32px; /* Incremento del tamaño vertical en un 20% */
             background-color: #26213d;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -28,26 +28,24 @@
             max-width: 672px;
             margin: 10px;
             box-sizing: border-box;
-            /* Incremento del tamaño vertical en un 40% */
-            height: 140%;
         }
 
         input[type="text"] {
-            padding: 22.4px; /* Aumento del tamaño en un 40% */
+            padding: 20.16px; /* Aumento del tamaño en un 20% */
             width: calc(100% - 20px);
-            margin-bottom: 22.4px; /* Aumento del tamaño en un 40% */
+            margin-bottom: 20.16px; /* Aumento del tamaño en un 20% */
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
-            font-size: 31.36px; /* Aumento del tamaño en un 40% */
+            font-size: 26.88px; /* Aumento del tamaño en un 20% */
             font-weight: 600;
             color: #fff;
         }
 
         button {
             width: calc(100% - 20px);
-            padding: 22.4px; /* Aumento del tamaño en un 40% */
-            font-size: 37.632px; /* Aumento del tamaño en un 40% */
+            padding: 20.16px; /* Aumento del tamaño en un 20% */
+            font-size: 32.256px; /* Aumento del tamaño en un 20% */
             background-color: #4caf50;
             color: #fff;
             border: none;
@@ -64,7 +62,7 @@
 <body>
 
     <div id="signup-container">
-        <h2 style="font-size: 33.6px; font-weight: 600; color: #fff;">Stay tuned with the last news & updates</h2>
+        <h2 style="font-size: 34.56px; font-weight: 600; color: #fff;">Stay tuned with the last news & updates</h2>
         <form>
             <input type="text" id="emailInput" placeholder="Enter your email" required>
             <br>
