--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
 
         #signup-container {
             text-align: center;
-            padding: 40.32px; /* Incremento del tamaño vertical en un 20% */
+            padding: 52.416px; /* Incremento del tamaño vertical en un 30% */
             background-color: #26213d;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: calc(100% - 20px);
-            max-width: 672px;
-            margin: 10px;
+            width: calc(100% - 26px); /* Incremento del tamaño horizontal en un 30% */
+            max-width: 872px; /* Incremento del tamaño máximo en un 30% */
+            margin: 13px; /* Incremento del margen en un 30% */
             box-sizing: border-box;
         }
 
         input[type="text"] {
-            padding: 20.16px; /* Aumento del tamaño en un 20% */
-            width: calc(100% - 20px);
-            margin-bottom: 20.16px; /* Aumento del tamaño en un 20% */
+            padding: 26.208px; /* Aumento del tamaño en un 30% */
+            width: calc(100% - 26px); /* Incremento del tamaño horizontal en un 30% */
+            margin-bottom: 26.208px; /* Aumento del tamaño en un 30% */
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
-            font-size: 26.88px; /* Aumento del tamaño en un 20% */
+            font-size: 34.944px; /* Aumento del tamaño en un 30% */
             font-weight: 600;
             color: #fff;
         }
 
         button {
-            width: calc(100% - 20px);
-            padding: 20.16px; /* Aumento del tamaño en un 20% */
-            font-size: 32.256px; /* Aumento del tamaño en un 20% */
+            width: calc(100% - 26px); /* Incremento del tamaño horizontal en un 30% */
+            padding: 26.208px; /* Aumento del tamaño en un 30% */
+            font-size: 49.4px; /* Aumento del tamaño en un 30% */
             background-color: #4caf50;
             color: #fff;
             border: none;
@@ -62,7 +62,7 @@
 <body>
 
     <div id="signup-container">
-        <h2 style="font-size: 34.56px; font-weight: 600; color: #fff;">Stay tuned with the last news & updates</h2>
+        <h2 style="font-size: 44.928px; font-weight: 600; color: #fff;">Stay tuned with the last news & updates</h2>
         <form>
             <input type="text" id="emailInput" placeholder="Enter your email" required>
             <br>
