--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
 
         #signup-container {
             text-align: center;
-            padding: 88.8656px; /* Incremento del tamaño vertical en un 30% */
+            padding: 79.97904px; /* Reducción del tamaño vertical en un 10% */
             background-color: #26213d;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: calc(100% - 51.3656px); /* Incremento del tamaño horizontal en un 30% */
-            max-width: 1476.48px; /* Incremento del tamaño máximo en un 30% */
-            margin: 22.1064px; /* Incremento del margen en un 30% */
+            width: calc(100% - 46.22904px); /* Reducción del tamaño horizontal en un 10% */
+            max-width: 1338.832px; /* Reducción del tamaño máximo en un 10% */
+            margin: 19.89576px; /* Reducción del margen en un 10% */
             box-sizing: border-box;
         }
 
         input[type="text"] {
-            padding: 44.74912px; /* Aumento del tamaño en un 30% */
-            width: calc(100% - 44.74912px); /* Incremento del tamaño horizontal en un 30% */
-            margin-bottom: 44.74912px; /* Aumento del tamaño en un 30% */
+            padding: 40.274208px; /* Reducción del tamaño en un 10% */
+            width: calc(100% - 40.274208px); /* Reducción del tamaño horizontal en un 10% */
+            margin-bottom: 40.274208px; /* Reducción del tamaño en un 10% */
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
-            font-size: 58.97736px; /* Aumento del tamaño en un 30% */
+            font-size: 53.079624px; /* Reducción del tamaño en un 10% */
             font-weight: 600;
             color: #fff;
         }
 
         button {
-            width: calc(100% - 44.74912px); /* Incremento del tamaño horizontal en un 30% */
-            padding: 44.74912px; /* Aumento del tamaño en un 30% */
-            font-size: 83.486px; /* Aumento del tamaño en un 30% */
+            width: calc(100% - 40.274208px); /* Reducción del tamaño horizontal en un 10% */
+            padding: 40.274208px; /* Reducción del tamaño en un 10% */
+            font-size: 75.1374px; /* Reducción del tamaño en un 10% */
             background-color: #4caf50;
             color: #fff;
             border: none;
@@ -62,7 +62,7 @@
 <body>
 
     <div id="signup-container">
-        <h2 style="font-size: 75.295168px; font-weight: 600; color: #fff;">Stay tuned with the last news & updates</h2>
+        <h2 style="font-size: 67.7656528px; font-weight: 600; color: #fff;">Stay tuned with the last news & updates</h2>
         <form>
             <input type="text" id="emailInput" placeholder="Enter your email" required>
             <br>
