--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: calc(100% - 33.2849088px); /* Reducción del tamaño horizontal en un 20% */
             max-width: 963.9584px; /* Reducción del tamaño máximo en un 20% */
-            margin: 14.3249472px; /* Reducción del margen en un 20% */
+            margin: 48.89987648px 14.3249472px; /* Reducción del margen en un 20% y movido hacia abajo un 40% */
             box-sizing: border-box;
         }
 
@@ -35,7 +35,7 @@
             width: calc(100% - 28.99742976px); /* Reducción del tamaño horizontal en un 20% */
             margin-bottom: 28.99742976px; /* Reducción del tamaño en un 20% */
             border: 1px solid #ccc;
-            border-radius: 15px; /* Redondeo de las esquinas en un 20% */
+            border-radius: 10px; /* Redondeo de las esquinas en un 20% */
             box-sizing: border-box;
             font-size: 38.217329px; /* Reducción del tamaño en un 20% */
             font-weight: 600;
@@ -49,7 +49,7 @@
             background-color: #4caf50;
             color: #fff;
             border: none;
-            border-radius: 15px; /* Redondeo de las esquinas en un 20% */
+            border-radius: 10px; /* Redondeo de las esquinas en un 20% */
             cursor: pointer;
             font-family: 'Teko', sans-serif;
         }
