--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: calc(100% - 33.2849088px); /* Reducción del tamaño horizontal en un 20% */
             max-width: 963.9584px; /* Reducción del tamaño máximo en un 20% */
-            margin: 48.89987648px 14.3249472px; /* Reducción del margen en un 20% y movido hacia abajo un 40% */
+            position: fixed;
+            bottom: 0; /* Fijar en la parte inferior */
+            left: 50%;
+            transform: translateX(-50%);
             box-sizing: border-box;
         }
 
