--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             width: calc(100% - 33.2849088px); /* Reducción del tamaño horizontal en un 20% */
             max-width: 963.9584px; /* Reducción del tamaño máximo en un 20% */
             position: fixed;
-            bottom: 0; /* Fijar en la parte inferior */
+            bottom: 50px; /* Fijar en la parte inferior */
             left: 50%;
             transform: translateX(-50%);
             box-sizing: border-box;
