--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-image: url('Img/OverImage.png');
+            background-image: url('Img/OverImage.png'); /* Agregar la imagen de fondo */
             background-size: cover;
             background-position: center;
         }
