--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            background-image: url('/Img/OverImage.png'); /* Ruta absoluta */
+            background-image: url('/Img/background-image.jpg'); /* Ruta absoluta */
             background-size: cover;
             background-position: center;
         }
