--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap">
+    <link rel="stylesheet" href="styles.css"> <!-- Ruta relativa al archivo de estilo -->
     <style>
         body {
             font-family: 'Teko', sans-serif;
@@ -62,6 +64,7 @@
         }
     </style>
 </head>
+
 <body>
 
     <div id="signup-container">
@@ -74,4 +77,5 @@
     </div>
 
 </body>
+
 </html>
