--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap">
-    <link rel="stylesheet" href="styles.css"> <!-- Ruta relativa al archivo de estilo -->
+    <link rel="stylesheet" href="style.css"> <!-- Ruta relativa al archivo de estilo -->
     <style>
         body {
             font-family: 'Teko', sans-serif;
