--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             left: 50%;
             transform: translateX(-50%);
             box-sizing: border-box;
+            font-family: 'Teko', sans-serif;
         }
 
         input[type="text"] {
