--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
             left: 50%;
             transform: translateX(-50%);
             box-sizing: border-box;
+        }
+
+        #signup-container h2 {
             font-family: 'Teko', sans-serif;
+            font-size: 48.790470016px;
+            font-weight: 600;
+            color: #fff;
         }
 
         input[type="text"] {
@@ -69,7 +75,7 @@
 <body>
 
     <div id="signup-container">
-        <h2 style="font-size: 48.790470016px; font-weight: 600; color: #fff;">Stay tuned with the last news & updates</h2>
+        <h2>Stay tuned with the last news & updates</h2>
         <form>
             <input type="text" id="emailInput" placeholder="Enter your email" required>
             <br>
