--- a/index.html
+++ b/index.html
@@ -71,79 +71,15 @@
                 width: 30px; /* Adjust the width for mobile */
                 margin-right: 10px;
             }
-            }
-
-            input[type="email"] {
-                width: 100%; /* Adjust the width to 100% for mobile */
-                font-size: 18px; /* Adjust font size for mobile */
-                margin-right: 10%; /* Remove right margin for mobile */
-                margin-bottom: 10px; /* Add bottom margin for mobile */
-                margin-left: 10%;
-            }
-
-            button {
-                padding: 8px 20px; /* Adjust padding for mobile */
-                font-size: 18px; /* Adjust font size for mobile */
-            }
-
-
-        /* Additional styles for the form container */
-        #signup-container {
-            text-align: center;
-            padding: 57.5849088px; /* Reducción del tamaño vertical en un 20% */
-            background-color: #26213d;
-            border-radius: 35px; /* Redondeo de las esquinas en un 20% */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: calc(100% - 33.2849088px); /* Reducción del tamaño horizontal en un 20% */
-            max-width: 963.9584px; /* Reducción del tamaño máximo en un 20% */
-            position: fixed;
-            bottom: 50px; /* Fijar en la parte inferior */
-            left: 50%;
-            transform: translateX(-50%);
-            box-sizing: border-box;
         }
 
-        #signup-container h2 {
-            font-family: 'Teko', sans-serif;
-            font-size: 48.790470016px;
-            font-weight: 600;
-            color: #fff;
-        }
-
-        input[type="text"] {
-            padding: 28.99742976px; /* Reducción del tamaño en un 20% */
-            width: calc(100% - 28.99742976px); /* Reducción del tamaño horizontal en un 20% */
-            margin-bottom: 28.99742976px; /* Reducción del tamaño en un 20% */
-            border: 1px solid #ccc;
-            border-radius: 10px; /* Redondeo de las esquinas en un 20% */
-            box-sizing: border-box;
-            font-size: 38.217329px; /* Reducción del tamaño en un 20% */
-            font-weight: 600;
-            color: #fff;
-        }
-
-        button {
-            width: calc(100% - 28.99742976px); /* Reducción del tamaño horizontal en un 20% */
-            padding: 28.99742976px; /* Reducción del tamaño en un 20% */
-            font-size: 54.098928px; /* Reducción del tamaño en un 20% */
-            background-color: #4caf50;
-            color: #fff;
-            border: none;
-            border-radius: 10px; /* Redondeo de las esquinas en un 20% */
-            cursor: pointer;
-            font-family: 'Teko', sans-serif;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
+        /* Additional styles for other content (removed signup styles) */
 
         #thankYouMessage {
             display: none;
             margin-top: 10px;
         }
 
-        
     </style>
 </head>
 <body>
@@ -158,16 +94,7 @@
     <!-- Image background -->
     <img id="image-background" src="img/background-image.jpg" alt="Background Image">
 
-    <!-- Formulario de registro -->
-    div id="signup-container">
-    <h2>Stay tuned with the last news & updates</h2>
-    <form>
-        <input type="text" id="emailInput" placeholder="Enter your email" required>
-        <br>
-        <button type="submit">SIGN UP</button>
-    </form>
-</div>
-    </div>
+    <!-- Other content (removed signup section) -->
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
